<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
		<modelVersion>4.0.0</modelVersion>
		<groupId>fr.kleecontrib</groupId>
		<artifactId>demo-ddd</artifactId>
		<version>0.0.1-SNAPSHOT</version>
		<packaging>pom</packaging>
		<name>demo-ddd</name>
		<description>demo-ddd</description>
		<modules>
				<module>domain</module>
				<module>usecase</module>
				<module>application</module>
				<module>port</module>
		</modules>

		<properties>
				<!-- Encodage -->
				<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
				<!-- java version -->
				<java.version>17</java.version>
				<maven.compiler.target>${java.version}</maven.compiler.target>
				<maven.compiler.source>${java.version}</maven.compiler.source>
				<!-- spring version -->
				<spring.version>2.5.0</spring.version>
				<junit.version>5.7.2</junit.version>
		</properties>

		<dependencyManagement>
				<dependencies>
						<dependency>
								<groupId>fr.kleecontrib</groupId>
								<artifactId>domain</artifactId>
								<version>0.0.1-SNAPSHOT</version>
						</dependency>
						<dependency>
								<groupId>fr.kleecontrib</groupId>
								<artifactId>usecase</artifactId>
								<version>0.0.1-SNAPSHOT</version>
						</dependency>
						<dependency>
								<groupId>fr.kleecontrib</groupId>
								<artifactId>application</artifactId>
								<version>0.0.1-SNAPSHOT</version>
						</dependency>
						<dependency>
								<groupId>org.springframework.boot</groupId>
								<artifactId>spring-boot-starter</artifactId>
								<version>${spring.version}</version>
						</dependency>
						<dependency>
								<groupId>org.springframework.boot</groupId>
								<artifactId>spring-boot-starter-web</artifactId>
								<version>${spring.version}</version>
						</dependency>
						<!-- DATABASE -->
						<dependency>
								<groupId>org.springframework.boot</groupId>
								<artifactId>spring-boot-starter-data-jdbc</artifactId>
								<version>${spring.version}</version>
						</dependency>
						<dependency>
								<groupId>org.springframework.boot</groupId>
								<artifactId>spring-boot-starter-data-jpa</artifactId>
								<version>${spring.version}</version>
						</dependency>
						<!-- LIQUIBASE -->
						<dependency>
								<groupId>org.liquibase</groupId>
								<artifactId>liquibase-core</artifactId>
								<version>4.3.5</version>
						</dependency>
						<dependency>
								<groupId>org.postgresql</groupId>
								<artifactId>postgresql</artifactId>
								<version>42.2.20</version>
								<scope>runtime</scope>
						</dependency>
						<!-- MAIL -->
						<dependency>
								<groupId>org.springframework.boot</groupId>
								<artifactId>spring-boot-starter-freemarker</artifactId>
								<version>${spring.version}</version>
						</dependency>
						<dependency>
								<groupId>org.springframework.boot</groupId>
								<artifactId>spring-boot-starter-mail</artifactId>
								<version>${spring.version}</version>
						</dependency>
						<!-- SECURITY -->
						<dependency>
								<groupId>org.springframework.boot</groupId>
								<artifactId>spring-boot-starter-security</artifactId>
								<version>${spring.version}</version>
						</dependency>
						<dependency>
								<groupId>org.springframework.boot</groupId>
								<artifactId>spring-boot-devtools</artifactId>
								<version>${spring.version}</version>
								<scope>runtime</scope>
								<optional>true</optional>
						</dependency>
						<!-- TOMCAT -->
						<dependency>
								<groupId>org.springframework.boot</groupId>
								<artifactId>spring-boot-starter-tomcat</artifactId>
								<version>${spring.version}</version>
								<scope>provided</scope>
						</dependency>
						<dependency>
								<groupId>javax.servlet</groupId>
								<artifactId>javax.servlet-api</artifactId>
								<version>4.0.1</version>
								<scope>provided</scope>
						</dependency>
						<dependency>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>1.18.20</version>
								<optional>true</optional>
								<scope>provided</scope>
						</dependency>
						<!-- TEST -->
						<dependency>
								<groupId>org.springframework.boot</groupId>
								<artifactId>spring-boot-starter-test</artifactId>
								<version>${spring.version}</version>
								<scope>test</scope>
						</dependency>
						<!-- MOCKITO -->
						<dependency>
								<groupId>org.mockito</groupId>
								<artifactId>mockito-junit-jupiter</artifactId>
								<version>4.5.1</version>
								<scope>test</scope>
						</dependency>
						<dependency>
								<groupId>net.bytebuddy</groupId>
								<artifactId>byte-buddy</artifactId>
								<version>1.12.10</version>
						</dependency>
						<!-- JUNIT -->
						<dependency>
								<groupId>org.junit.jupiter</groupId>
								<artifactId>junit-jupiter</artifactId>
								<version>${junit.version}</version>
								<scope>test</scope>
						</dependency>
						<dependency>
								<groupId>org.junit.jupiter</groupId>
								<artifactId>junit-jupiter-api</artifactId>
								<version>${junit.version}</version>
								<scope>test</scope>
						</dependency>
						<!-- junit for intelliJ -->
						<dependency>
								<groupId>org.junit.platform</groupId>
								<artifactId>junit-platform-launcher</artifactId>
								<version>1.7.2</version>
								<scope>test</scope>
						</dependency>
						<dependency>
								<groupId>org.junit.jupiter</groupId>
								<artifactId>junit-jupiter-engine</artifactId>
								<version>${junit.version}</version>
								<scope>test</scope>
						</dependency>
						<dependency>
								<groupId>org.assertj</groupId>
								<artifactId>assertj-core</artifactId>
								<version>3.19.0</version>
								<scope>test</scope>
						</dependency>
				</dependencies>
		</dependencyManagement>

		<build>
				<pluginManagement>
						<plugins>
								<plugin>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-war-plugin</artifactId>
										<version>3.3.1</version>
								</plugin>
								<plugin>
										<groupId>org.springframework.boot</groupId>
										<artifactId>spring-boot-maven-plugin</artifactId>
										<version>${spring.version}</version>
								</plugin>
								<plugin>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-surefire-plugin</artifactId>
										<version>3.0.0-M5</version>
								</plugin>
								<plugin>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-dependency-plugin</artifactId>
										<version>3.2.0</version>
										<executions>
												<execution>
														<goals>
																<goal>sources</goal>
																<goal>resolve</goal>
														</goals>
														<configuration>
																<classifier>javadoc</classifier>
														</configuration>
												</execution>
										</executions>
								</plugin>
						</plugins>
				</pluginManagement>
				<plugins>
						<plugin>
								<groupId>org.apache.maven.plugins</groupId>
								<artifactId>maven-compiler-plugin</artifactId>
								<configuration>
										<source>17</source>
										<target>17</target>
								</configuration>
						</plugin>
				</plugins>
		</build>
</project>
